--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,91 @@
-html,
+/* === 기본스타일 === */
+
 body {
-  padding: 0;
-  margin: 0;
-  line-height: 1.6;
-  font-size: 16px;
+  margin: 0 auto;
+  min-width: 320px;
+  font-size: 1.8rem;
+  line-height: 1.3;
   background-color: #ededed;
+  /* overflow: hidden; */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+p,
+table {
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+header,
+main,
+footer,
+section,
+article,
+aside,
+nav {
+  display: block;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+a img {
+  border: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+li {
+  list-style: none;
+}
+
+address,
+em,
+i,
+cite {
+  font-style: normal;
+}
+
+button {
+  cursor: pointer;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+fieldset {
+  border: none;
+}
+
+p {
+  display: flex;
+  justify-content: center;
 }
